--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-pandas>=1.3.0
-torch>=1.9.0
-transformers>=4.20.0
 sentence-transformers>=2.2.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
+torch>=1.9.0
 numpy>=1.21.0
-anthropic
-googletrans
-openai==0.28
+mistralai>=0.2.0
+python-dotenv
 groq
+
